# oneapi-hackathon-2023

./: .gitignore  CMakeLists.txt  README.md  intro.md  main.cpp  random.cpp  random.h
demo/: CMakeLists.txt  main.cpp
includes/: executor.h  generator.h  utils.h
src/: executor.cpp  generator.cpp  random.cpp
